--- a/sass/style.scss
+++ b/sass/style.scss
@@ -138,7 +138,7 @@ p {
 #section1 {
     position: relative;
     height: 100vh;
-    background: url(../images/tlo1.jpg) no-repeat;
+    background: url(https://raw.githubusercontent.com/nephente1/Website/master/images/tlo1.jpg) no-repeat;
     overflow: hidden;
     background-size: cover;
     display: flex;
@@ -305,7 +305,7 @@ p {
 // SECTION Quote
 #sectionQuote {
 	padding: 2em 0;
-	background: url('../images/motto2.jpg') no-repeat;
+	background: url('https://raw.githubusercontent.com/nephente1/Website/master/images/motto2.jpg') no-repeat;
 	background-size: cover;
 	background-position: center;
 	background-attachment: fixed;
@@ -336,7 +336,7 @@ p {
 /*SECTION 2*/
 #section2 {
   	padding: 4em 2em;
-  	background: url('../images/compBg_light.jpg');
+  	background: url('https://raw.githubusercontent.com/nephente1/Website/master/images/compBg_light.jpg');
 	background-size: cover;
   	margin: 0;
   	position: relative;
@@ -386,7 +386,7 @@ p {
 //SECTION 3
 #section3 {
 	padding: 4em 2em;
-	background: url('../images/bg-comp2.jpg') no-repeat;
+	background: url('https://raw.githubusercontent.com/nephente1/Website/master/images/bg-comp2.jpg') no-repeat;
 	background-size: cover;
 	background-position: bottom;
   	margin: 0;
@@ -412,7 +412,7 @@ p {
 
 //SECTION 4 Portfolio
 #section4 {
-	background: url('../images/compBg_light.jpg') no-repeat;
+	background: url('https://raw.githubusercontent.com/nephente1/Website/master/images/compBg_light.jpg') no-repeat;
 	background-size: cover;
 	background-position: bottom;
 	background-attachment: fixed;
