--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,7 @@ p {
   cursor: pointer; }
   @media (max-width: 640px) {
     #nav-btn {
-      right: 0%;
+      right: 1.5%;
       top: 0%; } }
 
 .btn-open:after {
@@ -121,8 +121,8 @@ p {
   justify-content: center; }
   @media (max-width: 760px) {
     #section1 {
-      height: auto;
-      padding: 10em 0em 3em 0; } }
+      height: 70%;
+      padding: 0em 0em 0em 0; } }
 
 #title {
   height: 40%;
@@ -131,6 +131,11 @@ p {
   margin-bottom: 5em;
   width: 100%;
   padding: 0 1em; }
+  @media (max-width: 740px) {
+    #title {
+      height: auto;
+      margin-top: 25%;
+      margin-bottom: 2em; } }
   #title p {
     margin-bottom: 60px; }
     #title p:nth-of-type(1) {
@@ -249,6 +254,9 @@ p {
 
 .firstScroll .scrollDown {
   margin-top: 120px; }
+  @media (max-width: 760px) {
+    .firstScroll .scrollDown {
+      margin-top: 20px; } }
 
 #sectionQuote {
   padding: 2em 0;
@@ -355,6 +363,13 @@ p {
     width: 100%;
     height: auto;
     margin: auto; }
+  #section4 .cms {
+    width: 215px;
+    height: 150px;
+    margin-left: 5px;
+    transition: 0.5s; }
+    #section4 .cms:hover {
+      opacity: 0.7; }
 
 .col-three {
   width: 100%;
@@ -362,6 +377,14 @@ p {
   text-align: left;
   float: left;
   margin-bottom: 30px; }
+  .col-three .next {
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    margin-top: 150px; }
+    @media (max-width: 720px) {
+      .col-three .next {
+        display: none; } }
 
 @media (min-width: 720px) {
   .col-three {
